# Amazing-AgenticUniversity-The-Hub-for-Modern-Agent-Frameworks

./: .gitignore  Old_README.md  README.md  check_api_keys.py
Agentic_Stock_Insight/: .gitignore  README.md  requirements.txt
Controllable-RAG-Agent/: .gitignore  README.md  functions_for_pipeline.py  requirements.txt  simulate_agent.py  sophisticated_rag_agent_harry_potter.ipynb
Langgraph_BuildingAmbientAgents/: Langgraph_memory_concepts_zh.md  README.md
Short-Long_term_memory_simulation/: CONTRIBUTING.md  INSTALL_AND_USAGE.md  LEARNING_SUMMARY.md  Makefile  README.md  README_zh-TW.md
ai_guide/: Langgraph_工作流設計.py  專案需求書.md  技術探討紀錄.md
context-Engineering/: README.md  context-Engineering-zh.md  context-Engineering.md
function_calling_MCP/: F5762_ch02.ipynb  (+5 more)
function_calling_MCP/realtime-master/: .gitignore  00_connect.py  01_update.py  02_update.py  03_text.py  04_text_tool.py  05_text_tool_single.py  06_audio_file.py  07_VAD.py  08_VAD_input_trans.py  09_VAD_tool.py  10_VAD_mcp.py  11_VAD_off.py  12_VAD_off_cancel.py  README.md  audio_util.py  mcp_utils.py  pyproject.toml  tool_utils.py
function_calling_MCP/realtime-master/realtime_webrtc/: secret_server.py
function_calling_MCP/realtime-master/realtime_webrtc/static/: test_mcp.html
function_calling_MCP/realtime-master/realtime_webrtc/static/css/: style.css
function_calling_MCP/realtime-master/realtime_webrtc/static/js/: main.js
function_calling_MCP/realtime-master/realtime_webrtc/templates/: index.html
muti-agent_crewai/: README.md  agents.py  main.py  pyproject.toml  search.py  tasks.py
(+119 files in other folders)
